<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="vm"
            type="com.example.weather.viewmodel.HomeViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/dark_background">

        <TextView
            android:id="@+id/tv_search_title"
            style="@style/textView_title_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_app"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/tv_small_title"
            style="@style/textView_description_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/small_title_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_search_title" />

        <com.google.android.material.textfield.TextInputLayout
            app:boxStrokeColor="@color/medium_pink_progress_bar"
            android:layout_margin="@dimen/medium_margin"
            android:id="@+id/text_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:errorEnabled="true"
            app:error = "@{vm.inputError}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_small_title">

            <EditText
                android:id="@+id/editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:textColor="@color/white"
                android:text="@={vm.userInputLiveData}"
                android:textCursorDrawable="@drawable/cursor" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/load"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/load_text"
            android:textColor="@color/white"
            android:onClick="@{()-> vm.loadData()}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_input_layout" />


        <androidx.core.widget.NestedScrollView
            android:id="@+id/scroll"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/btn_add"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/load">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constrain_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:goneIfNull="@{vm.cityWeatherLiveData}">


                <TextView
                    android:id="@+id/tv_name"
                    style="@style/textView_title_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{vm.cityWeatherLiveData.name}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_lon"
                    style="@style/textView_description_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{Double.toString(vm.cityWeatherLiveData.coord.lon)}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_name" />

                <TextView
                    android:id="@+id/tv_lat"
                    style="@style/textView_description_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{Double.toString(vm.cityWeatherLiveData.coord.lat)}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_lon" />

                <com.google.android.material.button.MaterialButton
                    android:visibility="gone"
                    android:id="@+id/mb_weather"
                    style="@style/materialButton_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/button_title_weather"
                    android:onClick="@{()->vm.changeDetailInfoVisibility()}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:goneIfNull="@{vm.cityWeatherLiveData}"
                    app:layout_constraintTop_toBottomOf="@+id/tv_lat" />

                <TextView
                    android:id="@+id/tv_weather_temp"
                    style="@style/textView_description_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{Double.toString(vm.cityWeatherLiveData.main.temp)}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/mb_weather" />


                <TextView
                    android:id="@+id/tv_weather_feels_like"
                    style="@style/textView_description_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{Double.toString(vm.cityWeatherLiveData.main.feelsLike)}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_weather_temp" />

                <TextView
                    android:id="@+id/tv_weather_temp_min"
                    style="@style/textView_description_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{Double.toString(vm.cityWeatherLiveData.main.tempMin)}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_weather_feels_like" />

                <TextView
                    android:id="@+id/tv_weather_temp_max"
                    style="@style/textView_description_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{Double.toString(vm.cityWeatherLiveData.main.tempMax)}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_weather_temp_min" />

                <TextView
                    android:id="@+id/tv_weather_pressure"
                    style="@style/textView_description_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{Double.toString(vm.cityWeatherLiveData.main.pressure)}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_weather_temp_max" />

                <TextView
                    android:id="@+id/tv_weather_humidity"
                    style="@style/textView_description_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{Double.toString(vm.cityWeatherLiveData.main.humidity)}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_weather_pressure" />


                <androidx.constraintlayout.widget.Group
                    android:id="@+id/group_weather"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:visibleIfTrue="@{vm.detailInfoVisibilityLiveData}"
                    app:constraint_referenced_ids="tv_weather_temp, tv_weather_temp_min, tv_weather_feels_like, tv_weather_temp_max, tv_weather_pressure, tv_weather_humidity" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>

        <com.google.android.material.button.MaterialButton
            android:visibility="gone"
            android:id="@+id/btn_add"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/medium_margin"
            android:backgroundTint="@color/medium_background_button"
            app:goneIfNull="@{vm.cityWeatherLiveData}"
            android:onClick="@{() -> vm.addToDB()}"
            android:text="@string/button_title"
            android:textColor="@color/medium_pink_text_color_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <include
            android:id="@+id/includedLoadingLayout"
            layout="@layout/loading_layout"
            app:isVisible = "@{vm.isLoadingLiveData()}"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>